instructions.InstructionsDrawG.scala.error
Compilation error:
InstructionsDrawG:1: error: not found: type blue
setCouleurBrosse(c:blue)
                   ^InstructionsDrawG:1: error: not found: value c
setCouleurBrosse(c:blue)
                 ^